<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.rohegde7.videocompression.ui.videocompression.VideoCompressionVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".ui.videocompression.VideoCompressionActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_start_guideline"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.03" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_end_guideline"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.97" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_start_guideline"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.01" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_end_guideline"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.97" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@id/video_edit_card_view"
            app:layout_constraintEnd_toEndOf="@id/vertical_end_guideline"
            app:layout_constraintStart_toStartOf="@id/vertical_start_guideline"
            app:layout_constraintTop_toTopOf="@id/horizontal_start_guideline">

            <VideoView
                android:id="@+id/video_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/video_edit_card_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/horizontal_end_guideline"
            app:layout_constraintEnd_toEndOf="@id/vertical_end_guideline"
            app:layout_constraintStart_toStartOf="@id/vertical_start_guideline">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/bitrate_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/bitrate"
                    app:layout_constraintBottom_toBottomOf="@id/bitrate_edit_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/bitrate_edit_text" />

                <EditText
                    android:id="@+id/bitrate_edit_text"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/white"
                    android:hint="@string/enter_bitrate"
                    android:inputType="number"
                    android:text="@={vm.mBitrate}"
                    app:layout_constraintBottom_toTopOf="@id/convert_video_button"
                    app:layout_constraintStart_toEndOf="@id/bitrate_text" />

                <RadioGroup
                    android:id="@+id/bitrate_unit_radio_group"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="@id/bitrate_edit_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/bitrate_edit_text">

                    <RadioButton
                        android:id="@+id/kbps_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@={vm.isKbps}"
                        android:text="@string/kbps" />

                    <RadioButton
                        android:id="@+id/mbps_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mbps" />

                </RadioGroup>

                <Button
                    android:id="@+id/convert_video_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="12dp"
                    android:backgroundTint="@color/yellow_shade1"
                    android:onClick="@{()->vm.onCompressButtonClicked()}"
                    android:text="@string/convert"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_goneMarginLeft="24dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>